# project-euler

./: .gitignore  README.md  common_functions.py  problem_1.py  problem_10.py  problem_11.py  problem_16.py  problem_18.py  problem_2.py  problem_22.py  problem_3.py  problem_4.py  problem_5.py  problem_6.py  problem_7.py  problem_8.py  problem_9.py  project_euler.py
projecteuler/: .gitignore  README.md  pyproject.toml
projecteuler/projecteuler/: __init__.py  common_functions.py  problem_10.py  problem_11.py  problem_14.py  problem_15.py  problem_16.py  problem_17.py  problem_18.py  problem_19.py  problem_2.py  problem_20.py  problem_21.py  problem_22.py  problem_23.py  problem_24.py  problem_25.py  problem_26.py  problem_27.py  problem_28.py  problem_29.py  problem_3.py  problem_30.py  problem_31.py  problem_32.py  problem_33.py  problem_34.py  problem_35.py  problem_36.py  problem_5.py
projecteuler/projecteuler.egg-info/: PKG-INFO  SOURCES.txt
projecteuler/tests/: test_problem_1.py  test_problem_10.py  test_problem_11.py  test_problem_12.py  test_problem_13.py  test_problem_14.py  test_problem_15.py  test_problem_16.py  test_problem_17.py  test_problem_18.py  test_problem_19.py  test_problem_2.py  test_problem_20.py  test_problem_21.py  test_problem_22.py  test_problem_23.py  test_problem_24.py  test_problem_25.py  test_problem_26.py  test_problem_27.py  test_problem_28.py  test_problem_29.py  test_problem_3.py  test_problem_30.py  test_problem_31.py  test_problem_32.py  test_problem_33.py  test_problem_34.py  test_problem_35.py  test_problem_36.py  (+6 more)
(+36 files in other folders)
